# pytest-briefcase

./: CHANGELOG.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml  pytest_briefcase.py  setup.cfg
changes/: 1.feature.rst  2.bugfix.rst  template.rst
dummy/sample_app/: __main__.py  app.py
tests/: test_importpath.py
